--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
   .card {
     width: 375px;
-    height: 90%;
+    height: 90vh;
     background: hsl(244, 38%, 16%);
     border-radius: 5px;
     text-align: center;
@@ -28,7 +28,7 @@
   .img-sec {
     height: 32%;
     width: 100%;
-    background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('images/image-header-mobile.jpg');
+    background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('image-header-mobile.jpg');
     background-size: cover;
   }
 
@@ -84,7 +84,7 @@
     }
 
     .img-sec {
-      background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('images/image-header-desktop.jpg');
+      background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('image-header-desktop.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       width: 100%;
